# ImageBinarization

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  NatBinarization.cpp  NatBinarization.h  NiblackBinarization.cpp  NiblackBinarization.h  NickBinarization.cpp  NickBinarization.h  SauvolaBinarization.cpp  SauvolaBinarization.h
test/: CMakeLists.txt  ImageProcessingTest.cpp  NatBinarizationTest.cpp  NiblackBinarizationTest.cpp  NickBinarizationTest.cpp  SauvolaBinarizationTest.cpp  gtest.cmake
